# Zynno

./: .env  .gitignore  Dockerfile  Procfile  bot03.py  main.py  pyproject.toml  requirements.txt  y  y.pub
models/: classroom.py  student.py  user.py
