[tool.poetry]
name = "zynno-backend"
version = "0.1.0"
description = "Zynno Final Backend"
authors = ["Mantu Patra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.110.0"
uvicorn = "^0.29.0"
motor = "^3.3.1"
pydantic = "^2.7.0"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
python-multipart = "^0.0.9"
dnspython = "^2.4.2"
httpx = "^0.24.0"
pillow = "^9.0.0"
pytesseract = "0.3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
